--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@types/multer": "^1.3.7",
     "async": "^2.6.0",
     "bcrypt-nodejs": "^0.0.3",
     "bluebird": "^3.5.1",
@@ -34,14 +35,18 @@
     "express-session": "^1.15.6",
     "express-validator": "^4.3.0",
     "fbgraph": "^1.4.1",
+    "injection-js": "^2.2.1",
     "lodash": "^4.17.5",
     "lusca": "^1.5.2",
     "mongoose": "^5.4.2",
+    "multer": "^1.4.1",
     "nodemailer": "^4.4.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "reflect-metadata": "^0.1.13",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
+    "routing-controllers": "^0.7.7",
     "winston": "^2.4.0"
   },
   "devDependencies": {
