--- a/app/package.json
+++ b/app/package.json
@@ -97,7 +97,9 @@
     "serve-static": "^1.13.2",
     "svg-sprite-loader": "4.1.3",
     "svgo": "1.2.0",
-    "vue-template-compiler": "2.6.10"
+    "vue-template-compiler": "2.6.10",
+    "webpack": "^4.34.0",
+    "webpack-cli": "^3.3.4"
   },
   "engines": {
     "node": ">=8.9",
