--- a/server/package.json
+++ b/server/package.json
@@ -24,20 +24,21 @@
     "@types/multer": "^1.3.7",
     "async": "^2.6.0",
     "bcrypt-nodejs": "^0.0.3",
-    "bluebird": "^3.5.1",
-    "body-parser": "^1.18.2",
-    "compression": "^1.7.1",
     "connect-mongo": "^2.0.0",
     "dotenv": "^4.0.0",
     "errorhandler": "^1.5.0",
-    "express": "^4.16.2",
-    "express-flash": "0.0.2",
-    "express-session": "^1.15.6",
-    "express-validator": "^4.3.0",
     "fbgraph": "^1.4.1",
     "injection-js": "^2.2.1",
+    "koa": "^2.7.0",
+    "koa-bodyparser": "^4.2.1",
+    "koa-compress": "^3.0.0",
+    "koa-helmet": "^4.2.0",
+    "koa-json-error": "^3.1.2",
+    "koa-multer": "^1.0.2",
+    "koa-passport": "^4.1.3",
+    "koa-router": "^7.4.0",
+    "koa-session": "^5.12.0",
     "lodash": "^4.17.5",
-    "lusca": "^1.5.2",
     "mongoose": "^5.4.2",
     "multer": "^1.4.1",
     "nodemailer": "^4.4.1",
@@ -58,18 +59,20 @@
     "@types/connect-mongo": "^0.0.35",
     "@types/dotenv": "^4.0.2",
     "@types/errorhandler": "^0.0.32",
-    "@types/express": "^4.11.1",
-    "@types/express-session": "^1.15.8",
     "@types/jest": "^22.1.3",
+    "@types/koa-bodyparser": "^4.3.0",
+    "@types/koa-compress": "^2.0.9",
+    "@types/koa-helmet": "^3.1.2",
+    "@types/koa-json-error": "^3.1.2",
+    "@types/koa-passport": "^4.0.2",
+    "@types/koa-session": "^5.10.0",
     "@types/lodash": "^4.14.91",
-    "@types/lusca": "^1.5.0",
     "@types/mongodb": "^3.0.5",
     "@types/mongoose": "^4.7.34",
     "@types/morgan": "^1.7.35",
     "@types/node": "^9.4.6",
     "@types/nodemailer": "^4.3.4",
     "@types/passport": "^0.4.3",
-    "@types/passport-facebook": "^2.1.7",
     "@types/passport-local": "^1.0.32",
     "@types/request": "^2.47.0",
     "@types/shelljs": "^0.7.8",
